# Kuta

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  b.sh  compile_commands.json  setup_windows.bat  vcpkg.json  windows.bat
.cache/clangd/index/: main.c.21F201A8D3CAB621.idx  main.h.AA2AB83C029B67E6.idx  renderer.c.14045E517363EF94.idx  renderer.h.30B88802D6717ECD.idx  swapchain.c.918A37506BA6E8D3.idx  swapchain.h.0E068083ADF6FC02.idx  utils.c.4108E7C3AB6FC0B5.idx  utils.h.73577C90FC9C1E7F.idx  vertex_data.c.5ADE41857D4ED2CF.idx  vertex_data.h.D17CF693EE58A6B7.idx  vulkan_core.c.5BA80BE86B9BE4AF.idx  vulkan_core.h.269EDBD1663C26E9.idx  window.c.298150B8986DE0C5.idx  window.h.8C63FD4B8C4B8CF2.idx
.github/workflows/: ci.yml
Notes/: explained.md  next_steps.md
examples/: main.c
examples/lightDiffuse/: Makefile  main.c
examples/lightDiffuse/include/: kuta.h
include/: kuta.h  types.h
models/: amumu.glb  twitch.mtl
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/Base/: camera.c  camera.h  descriptors.c  descriptors.h  kuta.c  kuta.h  main.c  main.h  models.c  models.h  renderer.c  renderer.h  swapchain.c  swapchain.h  textures.c  textures.h  utils.c  utils.h  vertex_data.c  vertex_data.h  vulkan_core.c  vulkan_core.h  window.c  window.h
src/common/: internal_types.h  utils.c  utils.h
src/core/: kuta.c  kuta_internal.h  vulkan_core.c  vulkan_core.h  window.c  window.h
src/engine/: main.c  main.h
src/graphics/: buffer_data.c  buffer_data.h  camera.c  camera.h  descriptors.c  descriptors.h  models.c  models.h  renderer.c  renderer.h  swapchain.c  swapchain.h  texture_data.c  texture_data.h
